--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3.3"
 services:
   postgresdb:
-    hostname: localhost
     image: postgres:latest
     restart: unless-stopped
     env_file: ./.env
+    expose:
+      - 5432
     environment:
       - POSTGRES_USER=${POSTGRESDB_USER}
       - POSTGRES_PASSWORD=$POSTGRESDB_PASSWORD
@@ -16,18 +17,20 @@ services:
     networks:
       - mynet
   app:
-    hostname: localhost
     depends_on:
       - postgresdb
     build: .
+    links:
+      - "postgresdb:localhost"
     restart: on-failure
     env_file: ./.env
     ports:
       - ${SPRING_LOCAL_PORT}:${SPRING_DOCKER_PORT}
-    environment:
-      DB_HOST: postgresdb # untested, but there should be a way to pass this in
+    expose:
+      - 8000
+    environment: # untested, but there should be a way to pass this in
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:postgresql://postgresdb:5432/jszj",
+        "spring.datasource.url"  : "jdbc:postgresql://localhost:5432/jszj",
         "spring.datasource.username" : "$POSTGRESDB_USER",
         "spring.datasource.password" : "$POSTGRESDB_PASSWORD",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.PostgreSQLDialect",
