--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   postgresdb:
-    image: postgres:latest
+    image: postgres:13.4-buster
     restart: unless-stopped
     env_file: ./.env
     environment:
